--- a/lab5/juego/Imagenes.qrc
+++ b/lab5/juego/Imagenes.qrc
@@ -1,6 +1,17 @@
 <RCC>
     <qresource prefix="/">
         <file>Image/Bomberman.png</file>
-        <file>Image/pared.png</file>
+        <file>Image/paredFuertepokemon.png</file>
+        <file>Image/paredDebilpokemon.png</file>
+        <file>Image/bomba.png</file>
+        <file>Image/enemigo1.png</file>
+        <file>Image/fuego1.png</file>
+        <file>Image/fondo.png</file>
+        <file>Image/gameover.png</file>
+        <file>Image/llave.png</file>
+        <file>Image/puertaAbierta.png</file>
+        <file>Image/puertaCerrada.png</file>
+        <file>Image/win.gif</file>
+        <file>Image/lose.gif</file>
     </qresource>
 </RCC>
