--- a/lab5/juego/mainwindow.ui
+++ b/lab5/juego/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>499</width>
-    <height>317</height>
+    <width>500</width>
+    <height>293</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -115,27 +115,14 @@
    <widget class="QPushButton" name="botonNuevoJuego">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>230</y>
-      <width>80</width>
-      <height>21</height>
+      <x>390</x>
+      <y>210</y>
+      <width>101</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Nuevo juego</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>260</y>
-      <width>47</width>
-      <height>13</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
+     <string>Jugar</string>
     </property>
    </widget>
   </widget>
@@ -144,7 +131,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>499</width>
+     <width>500</width>
      <height>20</height>
     </rect>
    </property>
